--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -231,3 +231,170 @@ bolt-ratio .hapyak-player:not(.hapyak-minimal-css) {
 //   @include bolt-var(background-color, bolt-color(indigo, dark));
 //   // @include var(background-color, )
 // }
+
+
+
+/* ------------------------------------ *\
+   Form Sandbox
+\* ------------------------------------ */
+
+.c-bolt-form {
+  display: block;
+}
+
+
+
+
+.c-bolt-fieldset {
+  display: block;
+  border: none;
+}
+
+.c-bolt-fieldset__legend {
+  @include bolt-margin(0 0 xsmall 0);
+
+  display: block;
+}
+
+.c-bolt-fieldset__items {
+  @include bolt-margin(0);
+  @include bolt-padding(0);
+}
+
+.c-bolt-fieldset__item {
+  @include bolt-margin(0 0 small 0);
+  @include bolt-padding(0);
+
+  display: block;
+  position: relative;
+
+  &:last-child {
+    @include bolt-margin-bottom(0);
+  }
+}
+
+
+
+
+$bolt-input-label-text-color: bolt-color(indigo, light);
+$bolt-input-label-text-indent: bolt-spacing(small);
+
+.c-bolt-input-label {
+  @include bolt-font-size(xsmall);
+
+  position: absolute;
+  top: 0.45rem;
+  left: $bolt-input-label-text-indent;
+  max-width: calc(100% - #{$bolt-input-label-text-indent * 2});
+  overflow: hidden;
+  color: $bolt-input-label-text-color;
+  line-height: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  opacity: 0;
+  transform: translate3d(0, -15%, 0) scale(0.8);
+  transform-origin: 0 100%;
+  transition: all $bolt-transition;
+}
+
+
+
+
+$bolt-input-field-text-color: bolt-color(gray, xdark); // TODO: [Mai] This is the theme text color
+$bolt-input-field-text-color--invalid: bolt-color(error); // TODO: [Mai] This is the theme error color
+$bolt-input-field-text-color--disabled: bolt-color(gray); // TODO: [Mai] This is the theme disabled color
+$bolt-input-field-background-color: bolt-color(white); // TODO: [Mai] This is the theme input background color
+$bolt-input-field-placeholder-color: rgba(bolt-color(gray, xdark), 0.66); // TODO: [Mai] This is the theme text color at 66%
+$bolt-input-field-placeholder-color--invalid: rgba(bolt-color(error), 0.66); // TODO: [Mai] This is the theme error color at 66%
+$bolt-input-field-border-color: rgba(bolt-color(indigo, light), 0.25); // TODO: [Mai] This is the theme link color at 25%
+$bolt-input-field-border-color--focus: bolt-color(indigo, light); // TODO: [Mai] This is the theme link color
+$bolt-input-field-border-color--invalid: rgba(bolt-color(error), 0.25); // TODO: [Mai] This is the theme error color at 25%
+$bolt-input-field-border-width: $bolt-border-width;
+$bolt-input-field-border-style: $bolt-border-style;
+$bolt-input-field-border-radius: $bolt-border-radius;
+$bolt-input-field-box-shadow--focus: 0 0 0.35rem bolt-color(indigo, light);
+$bolt-input-field-transition: $bolt-transition;
+
+@mixin bolt-input-field-placeholder($color) {
+  &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: $color;
+  }
+
+  &::-moz-placeholder { /* Firefox 19+ */
+    color: $color;
+  }
+
+  &:-ms-input-placeholder { /* IE 10+ */
+    color: $color;
+  }
+
+  &:-moz-placeholder { /* Firefox 18- */
+    color: $color;
+  }
+}
+
+.c-bolt-input-field {
+  @include bolt-padding(small);
+  @include bolt-font-size(small);
+  @include bolt-input-field-placeholder($bolt-input-field-placeholder-color);
+
+  display: block;
+  width: 100%;
+  color: $bolt-input-field-text-color;
+  border-color: $bolt-input-field-border-color;
+  border-style: $bolt-input-field-border-style;
+  border-width: $bolt-input-field-border-width;
+  border-radius: $bolt-input-field-border-radius;
+  background-color: $bolt-input-field-background-color;
+  transition: all $bolt-input-field-transition;
+
+  &.is-invalid,
+  &.is-touched:invalid {
+    @include bolt-input-field-placeholder($bolt-input-field-placeholder-color--invalid);
+
+    color: $bolt-input-field-text-color--invalid;
+    border-color: $bolt-input-field-border-color--invalid;
+
+    & ~ .c-bolt-input-message--error {
+      display: block;
+    }
+  }
+
+  &.is-disabled,
+  &:disabled {
+    color: $bolt-input-field-text-color--disabled;
+    cursor: not-allowed;
+  }
+
+  &.is-filled,
+  &:focus {
+    padding-top: calc(#{bolt-v-spacing(small)} + 0.45rem);
+    padding-bottom: calc(#{bolt-v-spacing(small)} - 0.45rem);
+
+    & + .c-bolt-input-label {
+      opacity: 1;
+      transform: translate3d(0, 0, 0) scale(1);
+    }
+  }
+
+  &:focus {
+    border-color: $bolt-input-field-border-color--focus;
+    box-shadow: $bolt-input-field-box-shadow--focus;
+    outline: none;
+  }
+}
+
+
+
+
+$bolt-input-message-color--error: bolt-color(error); // TODO: [Mai] This is the theme error color
+
+.c-bolt-input-message {
+  @include bolt-padding(small, squished);
+
+  display: none;
+}
+
+.c-bolt-input-message--error {
+  color: $bolt-input-message-color--error;
+}
