Fixes 'Notice: Array to string conversion' in PL compiles

--- a/src/_meta/_00-head.twig
+++ b/src/_meta/_00-head.twig
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html class="{{ htmlClass }}">
   <head>
-    <title>{{ title }}</title>
+    <title>Bolt Design System</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
 
     <link rel="stylesheet" href="../../../styles/bolt.css?{{ cacheBuster }}" media="all" />
-    
-    
+
+
     <meta name="bolt-javascript-path"  content="/vendor/">
 
     {# Inline Critical Font-specific CSS automatically #}
