--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
@@ -12,13 +12,13 @@
   }
 
   &__shape {
-    .c-bolt-background-shapes__svg {
-      fill: bolt-color(gray);
-    }
-
     &--orange {
       .c-bolt-background-shapes__svg {
         fill: bolt-color(orange);
+      }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(orange);
       }
     }
 
@@ -26,11 +26,53 @@
       .c-bolt-background-shapes__svg {
         fill: bolt-color(yellow);
       }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(yellow);
+      }
     }
 
     &--teal {
       .c-bolt-background-shapes__svg {
         fill: bolt-color(teal);
+      }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(teal);
+      }
+    }
+
+    &--indigo {
+      .c-bolt-background-shapes__svg {
+        fill: bolt-color(indigo);
+      }
+
+      .c-bolt-background-shapes__svg-outline {
+        stroke: bolt-color(indigo);
+      }
+    }
+
+    &--interior-yellow {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(yellow);
+      }
+    }
+
+    &--interior-indigo {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(indigo);
+      }
+    }
+
+    &--interior-teal {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(teal);
+      }
+    }
+
+    &--interior-orange {
+      .c-bolt-background-shapes__svg-interior {
+        fill: bolt-color(orange);
       }
     }
   }
