BK-26: Remove spacing between shapes

--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.scss
@@ -12,6 +12,11 @@
   }
 
   &__shape {
+
+    svg {
+      display: block;
+    }
+
     &--orange {
       .c-bolt-background-shapes__svg {
         fill: bolt-color(orange);
