--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
@@ -17,7 +17,7 @@
 
   <div class="{{ "#{baseClass}" }}">
     <div class="{{ "#{baseClass}__shapes" }}">
-      {% grid "o-bolt-grid--center" %}
+      {% grid "o-bolt-grid--center o-bolt-grid--full" %}
         {% for element in  elements %}
           {% set attributes = create_attribute({}) %}
 
