--- a/apps/pattern-lab--workshop/src/_patterns/02-components/action-block/action-blocks--theme-demo.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/action-block/action-blocks--theme-demo.twig
@@ -1,4 +1,4 @@
-{% extends "@bolt/theme-demo.twig" %}
+{% extends "@utils/theme-demo.twig" %}
 {% block demo_content %}
   {% include "@bolt/action-blocks.twig" with {
     "theme": theme,
