--- a/packages/components/bolt-ordered-list/demo/theming/ordered-list--theme-demo.twig
+++ b/packages/components/bolt-ordered-list/demo/theming/ordered-list--theme-demo.twig
@@ -1,4 +1,4 @@
-{% extends "@bolt/theme-demo.twig" %}
+{% extends "@utils/theme-demo.twig" %}
 {% block demo_content %}
   {% include "@bolt/ordered-list.twig" with {
     "theme": theme,
