--- a/packages/components/bolt-smooth-scroll/demo/smooth-scroll.demo.twig
+++ b/packages/components/bolt-smooth-scroll/demo/smooth-scroll.demo.twig
@@ -1,4 +1,4 @@
-{% extends "@bolt/theme-demo.twig" %}
+{% extends "@utils/theme-demo.twig" %}
 {% block demo_content %}
     <a class="test" href="#anchor-1">Link 1</a>
     <a href="#anchor-2">Link 2</a>
