BK-26: Add support for svgs with relative paths

--- a/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
+++ b/src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
@@ -29,7 +29,7 @@
 
           {% cell "u-bolt-width-1/3" %}
             <div {{ attributes.addClass(classes) }}>
-              {{ source(element.shape ~ '.svg') }}
+              {{ source('@bolt/' ~ element.shape ~ '.svg') }}
             </div>
           {% endcell %}
         {% endfor %}
